<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_gray"
    tools:context="linked.main.Start">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cooldog_icon"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:layout_above="@+id/titleText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/titleText"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:textSize="36sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_above="@+id/usernameField"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"
        android:textAlignment="center"
        android:background="@android:color/white"/>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:layout_below="@+id/usernameField"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_alignStart="@+id/usernameField"
        android:textAlignment="center"
        android:background="@android:color/white"
        android:fontFamily="sans-serif" />

    <Button
        android:id="@+id/signinButton"
        android:text="@string/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_above="@+id/noAccountText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/noAccountText"
        android:text="@string/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signupButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/signupButton"
        android:text="@string/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/signinButton"
        android:layout_alignStart="@+id/signinButton"
        android:layout_marginBottom="17dp"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorPrimary"/>


</RelativeLayout>