<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_gray"
    tools:context="linked.main.CreateAccount">

    <TextView
        android:text="@string/account_type"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="154dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:fontFamily="sans-serif" />

    <Button
        android:text="@string/user"
        android:id="@+id/userButton"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_width="200dp"
        android:textSize="18sp" />

    <Button
        android:text="@string/business"
        android:id="@+id/businessButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_below="@+id/userButton"
        android:layout_alignLeft="@+id/userButton"
        android:layout_alignStart="@+id/userButton" />

</RelativeLayout>