<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_business_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_gray"
    tools:context="linked.main.BusinessMenu">

    <ImageView
        android:id="@+id/infoImageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:srcCompat="@drawable/info_logo"
        android:layout_alignTop="@+id/editImageView"
        android:layout_alignLeft="@+id/activitiesImageView"
        android:layout_alignStart="@+id/activitiesImageView" />

    <ImageView
        android:id="@+id/editImageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:srcCompat="@drawable/edit_logo"
        android:layout_above="@+id/signoutImageView"
        android:layout_alignLeft="@+id/signoutImageView"
        android:layout_alignStart="@+id/signoutImageView"
        android:layout_marginBottom="65dp" />

    <ImageView
        android:id="@+id/activitiesImageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:srcCompat="@drawable/briefcase_logo"
        android:layout_alignTop="@+id/signoutImageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp" />

    <ImageView
        android:id="@+id/signoutImageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:srcCompat="@drawable/logout_logo"
        android:layout_marginRight="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="79dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_business_info"
        android:textAlignment="center"
        android:textColor="@color/prim_blue"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/infoImageView"
        android:layout_alignStart="@+id/infoImageView"
        android:layout_alignRight="@+id/activitiesImageView"
        android:layout_alignEnd="@+id/activitiesImageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_business_info"
        android:textAlignment="center"
        android:textColor="@color/prim_blue"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/signoutImageView"
        android:layout_alignStart="@+id/signoutImageView"
        android:layout_alignRight="@+id/signoutImageView"
        android:layout_alignEnd="@+id/signoutImageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_delete_act"
        android:layout_marginTop="17dp"
        android:textAlignment="center"
        android:textColor="@color/prim_blue"
        android:textSize="18sp"
        android:layout_below="@+id/activitiesImageView"
        android:layout_alignRight="@+id/activitiesImageView"
        android:layout_alignEnd="@+id/activitiesImageView"
        android:layout_alignLeft="@+id/activitiesImageView"
        android:layout_alignStart="@+id/activitiesImageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signout"
        android:textAlignment="center"
        android:textColor="@color/prim_blue"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/signoutImageView"
        android:layout_alignStart="@+id/signoutImageView"
        android:layout_alignRight="@+id/signoutImageView"
        android:layout_alignEnd="@+id/signoutImageView" />

</RelativeLayout>